w06 contraste colors css correction

--- a/styles/base.css
+++ b/styles/base.css
@@ -14,22 +14,17 @@ img {
 
 /* end Reset */
 
-/* End Utilities classes */
-
 
 body {
     font-family: 'Merriweather', serif;
     font-size: 16px;
     line-height: 1.5;
-    color: #6d6875;
     margin: 0 auto;
 }
 
 
 /* Header style */
 .hero{
-    background-color: #b5838d;
-    color: #ffb4a2;
     padding: 0.5rem;
     display: flex;
     justify-content: center;
@@ -40,39 +35,47 @@ body {
 
 .profile {
     width: 20%;
+    margin: 1rem;
 }
 
 .profile img {
     width: 100%;
     height: auto;
     min-width: 100px;
-    box-shadow: 0 0 30px #e2cfd3;
+    box-shadow: 0 0 30px #30343F;
 }
 
 h1{
     width: fit-content;
+    color: #A53860;
+    font-size: clamp(1.5rem, 5vw, 2.2rem);
+    font-weight: 900;
+    margin: 0;
 }
 
 /*navigation style*/
 
 .navigation {
     text-align: center;
+    background-color: #A53860;
 }
 
 .navigation a {
     display: none;
     text-decoration: none;
-    padding: 10px;
-    background-color: #ffcdb2;
+    padding: 1.5rem;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    font-weight: 600;
+    margin: 0 1rem;
 }
 
 .navigation a, .navigation a:visited{
-    color: #b5838d;
+    color: #fff;
 }
     
 .navigation a:hover, .navigation a:focus{  
-    background-color: #6d6875;
-    color: #ffcdb2;
+    background-color: #DA627D;
+    color: #fff;
     cursor: pointer;
 }
 
@@ -89,7 +92,7 @@ h1{
 
 #menu::before {
 	content: "☰";
-    color:#ffcdb2;
+    color:#A53860;
 }
 
 #menu.open::before {
@@ -103,22 +106,23 @@ h1{
 
 h2 {
     text-align: center;
-    border-bottom: 5px solid #b5838d;
+    color: #A53860;
+    border-bottom: 5px solid #A53860;
     font-weight: bold;
     padding: 10px;
     margin: 20px;
 }
 
 .card {
-    border: 3px solid #b5838d;
+    border: 3px solid #A53860;
     margin: 10px;
-    box-shadow: 0 0 30px #804d57;
+    box-shadow: 0 0 20px #804d57;
 }
 
 h3 {
     text-align: center;
-    background-color: #b5838d;
-    color: #ffcdb2;
+    background-color: #A53860;
+    color: #fff;
     margin: 0;
     padding: 25px;
     font-weight: bold;
@@ -143,13 +147,13 @@ p {
     position: relative;
 }
 
-.temple h1 {
+.temple h2 {
     position: absolute;
     top: 1.5rem;
     right: 1.5rem;
     color: #A4DDED;
     background-color: rgb(0, 33, 71, 0.75);
-    padding: 5px;
+    padding: 1rem;
     border: #A4DDED 2px solid;
 }
 
@@ -163,7 +167,7 @@ p {
 .map {
     width: auto;
     height: 400px;
-    border: 3px solid #b5838d;
+    border: 3px solid #A53860;
     margin: 10px;
     box-shadow: 0 0 30px #804d57;
 }
@@ -175,8 +179,8 @@ p {
 }
 
 footer {
-    background-color: #b5838d;
-    color: #ffcdb2;
+    background-color: #A53860;
+    color: #fff;
     margin: 0;
     padding: 20px;
 }
@@ -195,7 +199,7 @@ footer {
 
 
     .navigation {
-        background-color: #ffcdb2;
+        background-color: #A53860;
     }
 	
     .navigation a{
